# pslab-python

./: .bandit  .gitignore  .travis.yml  99-pslab.rules  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README-python-library.md  README.TXT  README.md  lint-requirements.txt  pyproject.toml  python-library  requirements.txt  setup.py  tox.ini
.github/workflows/: lint.yml  publish.yml  release.yml  workflow.yml
Installers/: pslab-python-installer-xubuntu-1804.sh
PSL/: Peripherals.py  README.md  abc  achan.py  analyticsClass.py  cli.py  commands_proto.py  digital_channel.py  i2c.py  logic_analyzer.py  motor.py  multimeter.py  oscilloscope.py  packet_handler.py  power_supply.py  sciencelab.py  sensorlist.py  waveform_generator.py
PSL/SENSORS/: AD7718_class.py  AD9833.py  ADS1115.py  BH1750.py  BMP180.py  HMC5883L.py  MF522.py  (+11 more)
docs/: CONTRIBUTING.md  Makefile  PSL.SENSORS.rst  PSL.rst  api.rst  bus.rst  cli.rst  conf.py  development.rst  external.rst  index.rst  installation.rst  instrument.rst  internal.rst  make.bat  protocol.rst  pslab.bus.rst  pslab.external.rst  pslab.instrument.rst  pslab.rst
pslab/: 99-pslab.rules  __init__.py  blink.py  cli.py  peripherals.py  protocol.py  sciencelab.py  serial_handler.py
tests/: __init__.py  conftest.py  oscitests.py  test_achan.py  test_analytics.py  test_cli.py  test_i2c.py  test_logic_analyzer.py  test_motor.py  test_mq135.py  test_multimeter.py  test_oscilloscope.py  test_packet_handler.py  test_peripherals_i2c.py  test_power_supply.py  test_serial_handler.py  test_spi.py  test_uart.py  test_waveform_generator.py
(+128 files in other folders)
